fix: music player now working on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -591,7 +591,7 @@ footer .social i{
         background-blend-mode: lighten;
     }
 
-    .volume, .toggle{
+    .volume, .music-player .toggle{
         display: none;
     }
 
@@ -728,7 +728,7 @@ footer .social i{
         flex-direction: column;
         padding: 2rem 0rem;
         border-bottom: 2px solid #e8054c;
-        height: 80vh;
+        min-height: 60vh;
         width: 100%;
         background-color: #00000091;
         z-index: 1;
@@ -963,6 +963,7 @@ footer .social i{
     .thoughts .blog{
         width: 80%;
         text-align: justify;
+        margin-top: 2rem;
     }
     
     .thoughts .con .right{
